# testament-bdd

./: .coveragerc  .gitignore  LICENSE  README.md  compare_versions.sh  justfile  pyproject.toml
.github/: release_notes_template.md
.github/actions/setup-python-workspace/: action.yaml
.github/release/: 0.0.1.md  0.0.2.md  0.0.3.md
.github/workflows/: pre-commit.yaml
testament/: __init__.py  main.py
testament/command/: __init__.py  run.py
testament/core/internal/: __init__.py  constants.py  errors.py  handler.py  models.py  output.py
tests/: __init__.py
tests/unit/: __init__.py  test_models.py
tools/: coverage_sheriff.py  parse_coverage.py  parse_junit.py
